<resources>
    <string name="app_name">Automi - Viewer</string>
    <string name="placeholder_log">Log:</string>
    <string name="placeholder_frame_count">Count: 0</string>
    <string name="placeholder_client_name">Anonymous</string>
    <string name="placeholder_port_text">9766</string>
    <string name="placeholder_ip_text">192.168.254.101</string>
    <string name="label_connect_button" >Connect</string>
    <string name="label_disconnect_button" >Disconnect</string>
    <string name="label_forward_button" >Forward</string>
    <string name="label_backward_button" >Backward</string>
    <string name="label_left_button" >Left</string>
    <string name="label_right_button" >Right</string>
    <string name="label_up_button" >Up</string>
    <string name="label_down_button" >Down</string>
    <string name="label_capture_button" >Capture</string>
    <string name="label_record_button" >Record</string>
    <string name="label_brightness" >Brightness</string>
    <string name="label_zoom" >Zoom</string>
    <string name="description_frame_view" >Frame View</string>
    <string name="description_up_button" >Up</string>
    <string name="description_down_button" >Down</string>
    <string name="description_forward_button" >Forward</string>
    <string name="description_backward_button" >Backward</string>
    <string name="description_left_button" >Left</string>
    <string name="description_right_button" >Right</string>
    <string name="description_capture_button" >Capture Image</string>
    <string name="description_record_button" >Record Video</string>
    <string name="description_brightness_slider" >Adjust Brightness</string>
    <string name="description_zoom_slider" >Digital Zoom</string>
    <string name="description_cdc_switch" >Connect or Disconnect</string>

</resources>
