<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ipText"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text|number"
        android:text="@string/placeholder_ip_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/widgetContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/portText"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/placeholder_port_text"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ipText"
        app:layout_constraintStart_toEndOf="@+id/ipText" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="68dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/placeholder_client_name"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/portText"
        app:layout_constraintStart_toEndOf="@+id/portText" />

    <Switch
        android:id="@+id/cdcBtn"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_connect_button"
        app:layout_constraintBottom_toTopOf="@+id/widgetContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/widgetContainer"
        android:layout_width="368dp"
        android:layout_height="498dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61">

        <ImageView
            android:id="@+id/frameView"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="?android:attr/colorForeground" />

        <ImageButton
            android:id="@+id/upBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/downBtn"
            android:layout_alignTop="@+id/captureBtn"
            android:alpha="0.50"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_up_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="416dp" />

        <ImageButton
            android:id="@+id/captureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/recordBtn"
            android:layout_alignTop="@+id/forwardBtn"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_capture_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="416dp" />

        <ImageButton
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/zoomSlider"
            android:layout_alignTop="@+id/downBtn"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_record_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_videocam_black_24dp"
            tools:layout_editor_absoluteX="296dp"
            tools:layout_editor_absoluteY="471dp" />

        <ImageButton
            android:id="@+id/backwardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/recordBtn"
            android:layout_centerHorizontal="true"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_backward_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="497dp" />

        <ImageButton
            android:id="@+id/forwardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rightBtn"
            android:layout_centerHorizontal="true"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_forward_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="416dp" />

        <ImageButton
            android:id="@+id/downBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/zoomSlider"
            android:layout_marginBottom="17dp"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_down_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="497dp" />

        <ImageButton
            android:id="@+id/rightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/recordBtn"
            android:layout_toEndOf="@+id/backwardBtn"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_right_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="457dp" />

        <ImageButton
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/recordBtn"
            android:layout_toStartOf="@+id/backwardBtn"
            android:background="@drawable/butt_back"
            android:contentDescription="@string/description_left_button"
            android:onClick="updateCommands"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="457dp" />

        <SeekBar
            android:id="@+id/zoomSlider"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="166dp"
            android:max="199"
            android:progress="0" />

        <SeekBar
            android:id="@+id/brightnessSlider"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/upBtn"
            android:layout_marginBottom="214dp" />

        <TextView
            android:id="@+id/brightnessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="201dp"
            android:text="@string/label_brightness" />

        <TextView
            android:id="@+id/zoomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/backwardBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="154dp"
            android:layout_marginEnd="2dp"
            android:text="@string/label_zoom" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>